fix white space, members, sponsors and add images

--- a/style.css
+++ b/style.css
@@ -39,3 +39,8 @@ body {
     width: 100% !important;
 	border-radius: 5px !important;
 }
+
+
+footer.site-footer {
+    margin-top: 0 !important;
+}
